// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setupMode ListingCallOut all internally collected should render for apm 1`] = `
<Fragment>
  <EuiCallOut
    color="danger"
    iconType="flag"
    size="m"
    title="Migrate to Metricbeat"
  >
    <p>
      These APM servers are monitored through internal collection. Migrate to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all internally collected should render for beats 1`] = `
<Fragment>
  <EuiCallOut
    color="danger"
    iconType="flag"
    size="m"
    title="Migrate to Metricbeat"
  >
    <p>
      These Beats instances are monitored through internal collection. Migrate to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all internally collected should render for elasticsearch 1`] = `
<Fragment>
  <EuiCallOut
    color="danger"
    iconType="flag"
    size="m"
    title="Migrate to Metricbeat"
  >
    <p>
      These Elasticsearch nodes are monitored through internal collection. Migrate to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all internally collected should render for kibana 1`] = `
<Fragment>
  <EuiCallOut
    color="danger"
    iconType="flag"
    size="m"
    title="Migrate to Metricbeat"
  >
    <p>
      These Kibana instances are monitored through internal collection. Migrate to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all internally collected should render for logstash 1`] = `
<Fragment>
  <EuiCallOut
    color="danger"
    iconType="flag"
    size="m"
    title="Migrate to Metricbeat"
  >
    <p>
      These Logstash nodes are monitored through internal collection. Migrate to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all migrated should render for apm 1`] = `
<Fragment>
  <EuiCallOut
    color="success"
    iconType="flag"
    size="m"
    title="Metricbeat is monitoring all servers."
  />
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all migrated should render for beats 1`] = `
<Fragment>
  <EuiCallOut
    color="success"
    iconType="flag"
    size="m"
    title="Metricbeat is monitoring all instances."
  />
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all migrated should render for elasticsearch 1`] = `
<Fragment>
  <EuiCallOut
    color="success"
    iconType="flag"
    size="m"
    title="Metricbeat is monitoring all nodes."
  />
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all migrated should render for kibana 1`] = `
<Fragment>
  <EuiCallOut
    color="success"
    iconType="flag"
    size="m"
    title="Metricbeat is monitoring all instances."
  />
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all migrated should render for logstash 1`] = `
<Fragment>
  <EuiCallOut
    color="success"
    iconType="flag"
    size="m"
    title="Metricbeat is monitoring all nodes."
  />
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all partially migrated should render for apm 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Disable internal collection"
  >
    <p>
      Metricbeat is now monitoring your APM servers. Disable internal collection to finish the migration.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all partially migrated should render for beats 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Disable internal collection"
  >
    <p>
      Metricbeat is now monitoring your Beats instances. Disable internal collection to finish the migration.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all partially migrated should render for elasticsearch 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Disable internal collection"
  >
    <p>
      Metricbeat is now monitoring your Elasticsearch nodes. Disable internal collection to finish the migration.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all partially migrated should render for kibana 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Disable internal collection"
  >
    <p>
      Metricbeat is now monitoring your Kibana instances. Disable internal collection to finish the migration.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut all partially migrated should render for logstash 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Disable internal collection"
  >
    <p>
      Metricbeat is now monitoring your Logstash nodes. Disable internal collection to finish the migration.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut no detectable instances should render for apm 1`] = `
<Fragment>
  <EuiCallOut
    color="primary"
    iconType="flag"
    size="m"
    title="We did not detect any APM servers."
  >
    <p>
      If you have APM servers, click 'Set up monitoring' below to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut no detectable instances should render for beats 1`] = `
<Fragment>
  <EuiCallOut
    color="primary"
    iconType="flag"
    size="m"
    title="We did not detect any Beats instances."
  >
    <p>
      If you have Beats instances, click 'Set up monitoring' below to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut no detectable instances should render for elasticsearch 1`] = `
<Fragment>
  <EuiCallOut
    color="primary"
    iconType="flag"
    size="m"
    title="We did not detect any Elasticsearch nodes."
  >
    <p>
      If you have Elasticsearch nodes, click 'Set up monitoring' below to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut no detectable instances should render for kibana 1`] = `
<Fragment>
  <EuiCallOut
    color="primary"
    iconType="flag"
    size="m"
    title="We did not detect any Kibana instances."
  >
    <p>
      If you have Kibana instances, click 'Set up monitoring' below to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut no detectable instances should render for logstash 1`] = `
<Fragment>
  <EuiCallOut
    color="primary"
    iconType="flag"
    size="m"
    title="We did not detect any Logstash nodes."
  >
    <p>
      If you have Logstash nodes, click 'Set up monitoring' below to monitor with Metricbeat.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut only detectable instances should render for apm 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="APM server detected"
  >
    <p>
      Based on your indices, we think you might have a APM server. Click 'Set up monitoring' below to start monitoring this server.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut only detectable instances should render for beats 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Beats instance detected"
  >
    <p>
      Based on your indices, we think you might have a Beats instance. Click 'Set up monitoring' below to start monitoring this instance.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut only detectable instances should render for elasticsearch 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Elasticsearch node detected"
  >
    <p>
      Based on your indices, we think you might have a Elasticsearch node. Click 'Set up monitoring' below to start monitoring this node.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut only detectable instances should render for kibana 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Kibana instance detected"
  >
    <p>
      Based on your indices, we think you might have a Kibana instance. Click 'Set up monitoring' below to start monitoring this instance.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;

exports[`setupMode ListingCallOut only detectable instances should render for logstash 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    iconType="flag"
    size="m"
    title="Logstash node detected"
  >
    <p>
      Based on your indices, we think you might have a Logstash node. Click 'Set up monitoring' below to start monitoring this node.
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  />
</Fragment>
`;
